# otus-cpp

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  main.cpp  test_version.cpp
.github/workflows/: release.yml
hw/001/: CMakeLists.txt
hw/001/tests/: CMakeLists.txt
hw/002/: CMakeLists.txt
hw/002/src/: main.cpp  main.h
hw/002/tests/: CMakeLists.txt  env.cpp  env.h  testenv.h.in  tests.cpp
hw/003/: CMakeLists.txt
hw/003/src/: main.cpp  main.h
hw/003/tests/: CMakeLists.txt  tests.cpp
hw/004/: main.cpp
tests/: CMakeLists.txt
